# adaptive-parallel-multimerge-sort-python

./: Cargo.toml  README.md  gerar_csv_python_numeros.py  gerar_csv_python_texto.py  pyproject.toml  resultados_benchmarks_python_numeros_corrigido.csv  resultados_benchmarks_python_texto.csv
src/: lib.rs
